# InfoGrep

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  __init__.py  go.mod  go.sum  improvements.txt  infogrep.py  setup.py  todo.txt  utils.go  utils.py
cmd/: infogrep.go
default-patterns/: gitleaks.yml  pii-stable.yml  rules-stable.yml
gitleaks-converter/: converter.go  go.mod
pkg/utils/: utils.go
src/: main.rs  scanner.rs  utils.rs
src/default-patterns/: rules-stable.yml
src/infogrep/: infogrep.py  utils.py
src/infogrep/default-patterns/: rules-stable.yml
utils/: utils.go
