[package]
name = "infogrep"
version = "3.0.0"
authors = ["Giardi (@Giardi_nah on X)"]
edition = "2021"
description = "A tool to grep for sensitive information"
license = "MIT"
repository = "https://github.com/Giardi77/InfoGrep"
readme = "README.md"
keywords = ["security", "bug-bounty", "api", "password", "leaks"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
regex = "1.10.6"
rayon = "1.10.0"
colored = "2.0"

[[bin]]
name = "infogrep"
path = "src/main.rs"